--- a/package.json
+++ b/package.json
@@ -1,8 +1,19 @@
 {
   "name": "rohtr",
   "version": "1.0.0",
-  "description": "nodejs http site router",
-  "main": "index.js",
+  "description": "A router-preloader for nodejs http(s) servers. Walks directory structures and preloads modules and templates.",
+  "main": "rohtr.js",
+  "directories": {
+    "test": "tests"
+  },
+  "dependencies": {
+    "pug": "^2.0.0-alpha6",
+    "rohtr-flatten": "^1.0.0",
+    "rohtr-loader": "^1.0.0",
+    "rohtr-walk": "^1.0.0",
+    "q": "^1.4.1"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,14 +21,16 @@
     "type": "git",
     "url": "git+https://github.com/matutter/rohtr.git"
   },
-  "author": "mat utter",
+  "keywords": [
+    "rohtr",
+    "router",
+    "nodejs",
+    "preload"
+  ],
+  "author": "matutter <mcutter.svc@gmail.com> (https://www.npmjs.com/profile/matutter)",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/matutter/rohtr/issues"
   },
-  "homepage": "https://github.com/matutter/rohtr#readme",
-  "dependencies": {
-    "pug": "^2.0.0-alpha6",
-    "q": "^1.4.1"
-  }
+  "homepage": "https://github.com/matutter/rohtr#readme"
 }
