--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
     "test": "tests"
   },
   "dependencies": {
-    "rohtr-flatten": "1.0.0",
-    "rohtr-loader": "1.0.0",
-    "rohtr-walk": "1.0.0"
+    "pug": "^2.0.0-alpha7",
+    "q": "^1.4.1"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ./tests/test.js"
   },
   "repository": {
     "type": "git",
